# website

./: .gitignore  .gitmodules  README.md  config.toml  hugo.toml
.github/workflows/: hugo.yml
assets/css/: _extra.scss
content/: _index.md  about.md
content/posts/: 2023-11-05-elon-musk-review.md  2023-11-05-joe-rogan-review.md  2023-11-05-specification-xyz.md  homelab-journey.md  htmx.md  infinite-scroll-htmx.md  learning-with-ai.md  papernote.md  test.md
content/posts/ai-and-the-internet/: index.md
content/posts/homelab-journey/: index.md
content/posts/htmx/: htmx.md
content/posts/infinite-scroll-htmx/: index.md
content/posts/libreboot_optiplex_3050_micro/: index.md
content/posts/linux-desktop/: index.md
content/posts/python-containerization/: Makefile  docker_x_python.drawio  index.md
content/posts/python-containerization/take_1/: Dockerfile
content/posts/python-containerization/take_2/: Dockerfile  requirements.txt
content/posts/python-containerization/take_3/: Dockerfile  pyproject.toml
content/posts/python-containerization/take_4/: Dockerfile
content/posts/python-containerization/take_6/: Dockerfile  pyproject.toml
content/posts/the-land-cruiser-of-laptops/: index.md
content/posts/ungoogled-chromium/: index.md
content/posts/uv_tutorial/: Dockerfile.take_1  Dockerfile.take_2  index.md  requirements.txt
content/posts/uv_tutorial/src/: main.py
posts/: 2023-11-05-this-is-a-test-post-with-reg-show-images.md
static/admin/: config.yml  index.html
themes/nhefner-website/: theme.toml
themes/nhefner-website/layouts/: index.html
(+5 files in other folders)
